--- a/css/styl.css
+++ b/css/styl.css
@@ -56,7 +56,7 @@ body {
 }
 
 ul {
-    /* list-style-type: none; */
+     list-style-type: none; 
 }
 a {
     text-decoration: none;
@@ -82,6 +82,10 @@ h1 {
 }
 h2 {
     font-size: 2rem;
+    padding: 40px;
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--primary-3)
 }   
 h3 {
     font-size: 1.25rem;
@@ -89,10 +93,14 @@ h3 {
 }
 h4 {
     font-size: 0.875rem;
+    /* margin-top: 0; */
 }
 p {
     margin-bottom: 1.25rem;
     color: var(--grey-5);
+}
+span {
+    color: var(--primary-5)
 }
 
 /* ================================ */
@@ -102,6 +110,11 @@ p {
     background-color: var(--primary-10);
     padding: 1rem 2rem;
     height: var(--nav-height);
+    position: fixed;
+    top:0;
+    left:0;
+    width:100%;
+    z-index: 1;
 }   
 .navbar .logo {
    width: var(--nav-height);
@@ -126,12 +139,12 @@ p {
     bottom: 0;
     left: 0;
     width: 100%;
-    background: rgba(154,192,204,0.5);
+    background: var(--grey-5);
     text-align: center;
     transition: var(--transition);
     /* transform: translateX(100%);  */
      transform: translateY(-100%);
-     z-index: -1;
+     z-index: 1;
 
 }
 .navbar .mobile-menu-list {
@@ -151,6 +164,7 @@ p {
 .navbar .mobile-menu-items.active{
     /* transform: translateX(0); */
      transform: translateY(0);
+     z-index: 2;
 }
 
 .navbar .mobile-menu {
@@ -165,11 +179,168 @@ p {
     icon-menu {
         display: none;
     } */
-      .main-menu, icon-menu {
+      .main-menu, .icon-menu {
         display: none;
     }
   }
     .navbar .mobile-menu {
         display: block;
+        a{
+            color: var(--primary-white);
+        }
     }
 }
+/* hero */
+.hero .contaner {
+    max-width: 1100px;
+    margin: var(--nav-height) auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    position: relative;
+}
+.hero {
+      background: url(../img/beach.png) center/cover no-repeat; 
+    color: var(--primary-white);
+    position: relative;
+    text-align: center;
+    p {
+        font-size: 1.5rem;
+        padding: 1rem;
+        margin-bottom:2.5rem;
+    }
+}
+.hero h1 {
+   
+    padding: 1rem;
+
+}
+.hero::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.2;
+    background: var(--grey-7);
+
+}
+.hero .btn {
+    text-decoration: none;
+    color: var(--primary-white);
+    padding: 1rem 1rem;
+    background: var(--primary-5);
+    border: 1px solid var(--primary-white);
+    border-radius: var(--radius);
+    cursor: pointer;
+    opacity: 0.7;
+}
+.hero .btn:hover {
+    opacity:0.7;
+    background-color: var(--primary-3);
+}
+@media (max-width: 768px) {
+   .hero {
+    /* background: none; */
+    background: var(--primary-5);
+    /* border: 2px solid red; */
+   }
+   .hero h1 {
+    /* color:red; */
+    font-size: 2rem;
+    line-height: 1.3;
+   } 
+    
+
+
+  .hero p{
+    font-size: 1.25rem;
+
+  
+   }
+   .hero .btn {
+    font-size:1rem;
+  }
+}
+
+/*==================== about======================= */
+.about, .services, .tours {
+    padding-top:var(--nav-height);
+}
+
+.about-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: start;
+    padding: 0 2.8rem;
+    gap: 1.25rem;;
+    position: relative;
+
+}
+
+.about-img {
+   width: 50%;
+    
+}
+@media (min-width: 800px) {
+
+ .about-img::before {
+    content: "";
+    position: absolute;
+    width: calc(50% - 2.8rem);
+    height:100%;
+    box-sizing: border-box;
+    top: -1.25rem;
+    left: 1.25rem;
+    border:  10px solid var(--grey-3);
+    z-index: -1;
+ }   
+}
+
+.text {
+    display: flex;
+    flex-direction: column;
+  width: 45%;
+    h3 {
+        color: var(--primary-3);
+    }
+    .btn-about {
+        align-self: start;
+        padding: 1rem;
+        background: var(--primary-5);
+        color: var(--primary-white);
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        font-size: 0.75rem;
+    }
+    .btn-about:hover {
+        background: var(--primary-8);
+        color: var(--primary-4);
+        /* border-radius: var(--radius); */
+    }
+}
+@media (max-width: 576px) {
+
+.about-content {
+    flex-direction: column;
+}
+.text {
+    width: 100%;
+    h3 {
+        font-size: 1rem;
+    }
+}
+ .about-img {
+    width: 100%;
+ }
+
+}
+/* services */
+
+
+/* tours */
+
